# mini-project-1-prosa.ai

./: .dockerignore  .gitignore  Dockerfile  Procfile  db.sqlite3  pyproject.toml  requirements.txt
account/: models.py  renderers.py  utils.py
account/api/: serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_auto_20220311_1703.py  0003_profile_name.py  0004_auto_20220313_1616.py  0005_remove_profile_name.py  0006_user.py  0007_auto_20220315_1011.py
comment/: models.py
comment/api/: serializers.py  urls.py  views.py
comment/migrations/: 0001_initial.py  0002_auto_20220314_1339.py  0003_delete_comment.py  0004_comment.py
miniproject/: settings.py  urls.py
post/: admin.py  models.py
post/api/: serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py
